Making first push without hifi designs

--- a/frontend/src/sass/abstracts/_variables.scss
+++ b/frontend/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 //colors
 
-$color-primary: #328da8;
+$color-primary: #fff;
 $color-secondary: #47acad;
 $color-tertiary:  #2fa18a;
 $color-quatenary: #87369e;
