Committing version 3 allerrorsfixed proceeding to hifi

--- a/frontend/src/sass/abstracts/_variables.scss
+++ b/frontend/src/sass/abstracts/_variables.scss
@@ -1,18 +1,18 @@
 //colors
 
-$color-primary: #fff;
+$color-primary: #328da8;
 $color-secondary: #47acad;
 $color-tertiary:  #2fa18a;
 $color-quatenary: #87369e;
 
 $color-grey-light: #efefef;
-$color-grey-dark: #f333;
+$color-grey-dark: #333;
 
 $color-hover: #ebf5f8;
 $color-link-hover: #ccc;
 
 $color-paragraph: #484848;
-$color-grey: #34eb49;
+$color-green: #34eb49;
 
 $color-white: #fff;
 $color-black: #000;
