--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -11,5 +11,9 @@
 @import './components/alerts';
 @import './components/navbar';
 @import './components/auth';
+@import './components/listingform';
+@import './pages/home';
+@import './components/card';
+@import './components/pagination';
 
 
