--- a/frontend/src/sass/components/_navbar.scss
+++ b/frontend/src/sass/components/_navbar.scss
@@ -7,8 +7,8 @@
         align-items: center;
         width: 100%;
         height: 10rem;
-        background-color: $color-primary;
-        flex-wrap: wrap;
+        background-color: $color-white;
+        flex-wrap: wrap;       
 
         &__logo {
             margin-left: 4rem;
@@ -16,8 +16,9 @@
            
             &__link {
                 font-size: 2.8rem;
-                color: $color-white;
+                color: #333;
                 text-decoration: none;
+                
             }
         }
         &__auth {
@@ -25,8 +26,9 @@
     
             &__link {
                 font-size: 1.8rem;
-                color: $color-white;
+                color: #333;
                 text-decoration: none;
+              
 
                 &:first-of-type {
                     margin-right: 8rem;
