--- a/frontend/src/sass/pages/_home.scss
+++ b/frontend/src/sass/pages/_home.scss
@@ -1,14 +1,14 @@
-.listings {
-
+.home {
     &__form {
         margin-top: 4rem;
+        margin-bottom: 8rem;
     }
+
     &__listings {
-        margin-top: 6rem;
         margin-bottom: 4rem;
     }
+
     &__pagination {
         margin-bottom: 6rem;
     }
-
 }
